--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
 
@@ -50,11 +50,12 @@
 
     <!-- Header -->
     <header class="masthead">
-      <div class="container d-flex h-100 align-items-center">
+      <div class="overlay"></div>
+      <div class="container d-flex h-100 align-items-center main-banner-content">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Jason Feliz</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5"> Design Thinker | Full-Stack Software Engineer | Rubyist</h2>
+          <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
         </div>
       </div>
     </header>
