--- a/index.html
+++ b/index.html
@@ -65,12 +65,39 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <img src="./img/profile.jpeg" alt="profile photo" class="profile-photo">
+            <p class="text-white-50">
+               helloWorld()! I am a self-taught full-stack software engineer with a knack for design thinking.
+               My passion for helping my community and solving problems inspires me everyday. I’m
+               an agile thinker who loves to build stuff, test things, make mistakes, receive feedback, and iterate.
+             </p>
           </div>
         </div>
-        <img src="img/ipad.png" class="img-fluid" alt="">
+      <div class="skills text-white-50">
+        <h3 class="skills-title">What I can do</h3>
+        <ul class="skills-list">
+          <li>PHP</li>
+          <li>MySQL</li>
+          <li>Ruby</li>
+          <li>Rails</li>
+          <li>postgreSQL</li>
+          <li>NodeJS</li>
+          <li>ExpressJs</li>
+          <li>mongoDB</li>
+          <li>mongoose</li>
+          <li>ReactJs</li>
+          <li>JavaScript</li>
+          <li>jQuery</li>
+          <li>JSON</li>
+          <li>AJAX</li>
+          <li>RESTful API</li>
+          <li>Git/GitHub</li>
+          <li>R/Rstudio</li>
+          <li>handlebarsJS</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ul>
+      </div>
       </div>
     </section>
 
