--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand::200,200i,300,300i,400,400i,600" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/grayscale.css" rel="stylesheet">
 
@@ -103,6 +103,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
+      <h1 class="portfolio-title">Portfolio</h1>
       <div class="container">
 
         <!-- Featured Project Row -->
