--- a/index.html
+++ b/index.html
@@ -108,12 +108,21 @@
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/mmc2.png" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <h4>MeetMyCampus</h4>
+              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed.
+                This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                <div class="links">
+                  <div class="">
+                    <a href="https://www.meetmycampus.com/warmpuppies">Live Demo</a>
+                  </div>
+                  <div class="">
+                    <a href="https://github.com/jasonfeliz/meetmycampus">GitHub</a>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
@@ -121,15 +130,23 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+            <img class="img-fluid" src="img/tic.png" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                  <h4 class="text-white">Tic Tac Toe</h4>
+                  <p class="mb-0 text-white-50">A Tic-Tac-Toe game built as a single page application using jQuery and AJAX to connect to a third-party API </p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
+                  <div class="links">
+                    <div class="">
+                      <a href="https://jasonfeliz.github.io/tic-tac-toe/">Live Demo</a>
+                    </div>
+                    <div class="">
+                      <a href="https://github.com/jasonfeliz/tic-tac-toe">GitHub</a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -139,15 +156,24 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+            <img class="img-fluid" src="img/campusnest.png" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <h4 class="text-white">Campus Nest</h4>
+                  <p class="mb-0 text-white-50">I built my client in JQuery and my API in Rails with ActiveRecord for a college campus forum. In addition, I utilized handlebarsJS for
+                  handling and displaying response data from the server. </p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
+                  <div class="links">
+                    <div class="">
+                      <a href="https://jasonfeliz.github.io/campusnest-frontend/">Live Demo</a>
+                    </div>
+                    <div class="">
+                      <a href="https://github.com/jasonfeliz/campusnest-frontend">GitHub</a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -159,21 +185,7 @@
 
     <!-- Signup Section -->
     <section id="signup" class="signup-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10 col-lg-8 mx-auto text-center">
-
-            <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-
-            <form class="form-inline d-flex">
-              <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-              <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-            </form>
-
-          </div>
-        </div>
-      </div>
+            <h2 class="text-white mb-5">Let's connect!</h2>
     </section>
 
     <!-- Contact Section -->
@@ -236,7 +248,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        Made with Love
       </div>
     </footer>
 
