--- a/index.html
+++ b/index.html
@@ -113,14 +113,15 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>MeetMyCampus</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed.
-                This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <p class="text-black-50 mb-0">Used JavaScript, Jquery, and AJAX to build out the front-end stack.
+                Built a scalable backend with PHP and MySql.Features included a forum, where users can post and reply to discussions, creating communities, user profiles.
+                 Also, each university had its own hub of communities and students</p>
                 <div class="links">
                   <div class="">
-                    <a href="https://www.meetmycampus.com/warmpuppies">Live Demo</a>
+                    <a href="https://www.meetmycampus.com/warmpuppies" target="_blank">Live Demo</a>
                   </div>
                   <div class="">
-                    <a href="https://github.com/jasonfeliz/meetmycampus">GitHub</a>
+                    <a href="https://github.com/jasonfeliz/meetmycampus" target="_blank">GitHub</a>
                   </div>
                 </div>
             </div>
@@ -141,10 +142,10 @@
                   <hr class="d-none d-lg-block mb-0 ml-0">
                   <div class="links">
                     <div class="">
-                      <a href="https://jasonfeliz.github.io/tic-tac-toe/">Live Demo</a>
+                      <a href="https://jasonfeliz.github.io/tic-tac-toe/" target="_blank">Live Demo</a>
                     </div>
                     <div class="">
-                      <a href="https://github.com/jasonfeliz/tic-tac-toe">GitHub</a>
+                      <a href="https://github.com/jasonfeliz/tic-tac-toe" target="_blank">GitHub</a>
                     </div>
                   </div>
                 </div>
@@ -168,10 +169,10 @@
                   <hr class="d-none d-lg-block mb-0 mr-0">
                   <div class="links">
                     <div class="">
-                      <a href="https://jasonfeliz.github.io/campusnest-frontend/">Live Demo</a>
+                      <a href="https://jasonfeliz.github.io/campusnest-frontend/" target="_blank">Live Demo</a>
                     </div>
                     <div class="">
-                      <a href="https://github.com/jasonfeliz/campusnest-frontend">GitHub</a>
+                      <a href="https://github.com/jasonfeliz/campusnest-frontend" target="_blank">GitHub</a>
                     </div>
                   </div>
                 </div>
@@ -185,7 +186,7 @@
 
     <!-- Signup Section -->
     <section id="signup" class="signup-section">
-            <h2 class="text-white mb-5">Let's connect!</h2>
+            <h1 class="text-white mb-5">Let's connect!</h1>
     </section>
 
     <!-- Contact Section -->
@@ -197,10 +198,9 @@
           <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
-                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                <i class="fab fa-linkedin text-primary mb-2"></i>
+                <hr class="hr">
+                <a href="https://www.linkedin.com/in/jason-feliz/" target="_blank">LinkedIn</a>
               </div>
             </div>
           </div>
@@ -209,10 +209,9 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-envelope text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Email</h4>
-                <hr class="my-4">
+                <hr class="hr">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="mailto:jasonrfeliz@gmail.com">jasonrfeliz@gmail.com</a>
                 </div>
               </div>
             </div>
@@ -221,18 +220,17 @@
           <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
-                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Phone</h4>
-                <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
+                <i class="fab fa-github text-primary mb-2"></i>
+                <hr class="hr">
+                <a href="https://github.com/jasonfeliz" target="_blank">GitHub</a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="social d-flex justify-content-center">
+        <!-- <div class="social d-flex justify-content-center">
           <a href="#" class="mx-2">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin"></i>
           </a>
           <a href="#" class="mx-2">
             <i class="fab fa-facebook-f"></i>
@@ -240,7 +238,7 @@
           <a href="#" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
-        </div>
+        </div> -->
 
       </div>
     </section>
@@ -248,7 +246,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Made with Love
+        Made with <i class="fas fa-heart" style="color:#a92e2e;font-size:1.5em;"></i>
       </div>
     </footer>
 
