--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container d-flex h-100 align-items-center main-banner-content">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Jason Feliz</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5"> Design Thinker | Full-Stack Software Engineer | Rubyist</h2>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5"> Design Thinker | Software Engineer | Life Enthusiast</h2>
           <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
         </div>
       </div>
