added lets chat to portfolio

--- a/index.html
+++ b/index.html
@@ -189,12 +189,38 @@
 
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/tic.png" alt="">
+            <img class="img-fluid" src="img/chat.png" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
+                  <h4 class="text-white">LetsChat</h4>
+                  <p class="mb-0 text-white-50">A simple chat app built using modern web technologies
+                    like NodeJs, ExpressJs, WebPack 4 and MongoDB. App uses Socket.io to let users chat with each other,
+                    in a group chat, in real-time.</p>
+                  <hr class="d-none d-lg-block mb-0 ml-0">
+                  <div class="links">
+                    <div class="">
+                      <a href="https://gachatapp.herokuapp.com" target="_blank">Live Demo</a>
+                    </div>
+                    <div class="">
+                      <a href="https://github.com/jasonfeliz/letschat" target="_blank">GitHub</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img class="img-fluid" src="img/tic.png" alt="">
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 my-auto text-center text-lg-right">
                   <h4 class="text-white">Tic Tac Toe</h4>
                   <p class="mb-0 text-white-50">A Tic-Tac-Toe game built as a single page application using jQuery and AJAX to connect to a third-party API </p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
@@ -211,15 +237,14 @@
             </div>
           </div>
         </div>
-
-        <div class="row justify-content-center no-gutters">
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img class="img-fluid" src="img/hello.png" alt="">
           </div>
-          <div class="col-lg-6 order-lg-first">
+          <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-right">
+                <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">HelloKittySurvey</h4>
                   <p class="mb-0 text-white-50">Team Project - Built an app that lets users create custom surveys
                     and collect responses for that particular survey. Uses Node/Express for server-side with MongoDb
@@ -238,6 +263,9 @@
             </div>
           </div>
         </div>
+
+
+
 
       </div>
     </section>
