updated about me

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="col-lg-8 mx-auto">
             <img src="./img/profile.jpeg" alt="profile photo" class="profile-photo">
             <p class="text-white-50">
-               helloWorld()! I am a self-taught full-stack software engineer with a knack for design thinking.
+               helloWorld()! I am a self-taught, self-motivated software engineer with an urge to learn and grow.
                My passion for helping my community and solving problems inspires me everyday. I’m
                an agile thinker who loves to build stuff, test things, make mistakes, receive feedback, and iterate.
              </p>
