--- a/index.html
+++ b/index.html
@@ -263,8 +263,49 @@
             </div>
           </div>
         </div>
-
-
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img class="img-fluid" src="img/hiking.jpg" alt="">
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 my-auto text-center text-lg-right">
+                  <h4 class="text-white">LetsHike</h4>
+                  <p class="mb-0 text-white-50">A full-stack React and Rails app for the hiking aficionodo.
+                    Uses third-party api to get hiking trails near a given location and its respective weather. The app
+                    will issue recommendations to users based on the weather of where the trail is located.
+                    It will use Hiking Project API for trails and OpenWeather API for local weather.
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 ml-0">
+                  <div class="links">
+                    <h3 class="soon">Coming Soon!</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+          <div class="col-lg-6">
+            <img class="img-fluid" src="img/codebinj.jpg" alt="">
+          </div>
+          <div class="col-lg-6">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 my-auto text-center text-lg-left">
+                  <h4 class="text-white">CodeBinj</h4>
+                  <p class="mb-0 text-white-50">An app built using React and PHP/Laravel with MySql. CobeBinj is coding community for self-taught coders -
+                     a place to share and curate coding resources, articles, books list, plans, curriculums, strategies and ideas.</p>
+                  <hr class="d-none d-lg-block mb-0 ml-0">
+                  <div class="links">
+                    <h3 class="soon">Coming Soon!</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
       </div>
