--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/hiking.jpg" alt="">
+            <img class="img-fluid" src="img/hike.png" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
@@ -279,7 +279,12 @@
                   </p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                   <div class="links">
-                    <h3 class="soon">Coming Soon!</h3>
+                    <div class="">
+                      <a href="https://letshike.herokuapp.com/" target="_blank">Live Demo</a>
+                    </div>
+                    <div class="">
+                      <a href="https://github.com/jasonfeliz/letshike" target="_blank">GitHub</a>
+                    </div>
                   </div>
                 </div>
               </div>
