--- a/index.html
+++ b/index.html
@@ -213,14 +213,43 @@
             </div>
           </div>
         </div>
+
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/tic.png" alt="">
+            <img class="img-fluid" src="img/hike.png" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
+                  <h4 class="text-white">LetsHike</h4>
+                  <p class="mb-0 text-white-50">A full-stack React and Rails app for the hiking aficionado.
+                    Uses Hiking Project API for trails and OpenWeather API for local weather. The app
+                    will issue recommendations to users based on the weather of where the trail is located.
+                  </p>
+                  <hr class="d-none d-lg-block mb-0 ml-0">
+                  <div class="links">
+                    <div class="">
+                      <a href="https://letshike.herokuapp.com/" target="_blank">Live Demo</a>
+                    </div>
+                    <div class="">
+                      <a href="https://github.com/jasonfeliz/letshike" target="_blank">GitHub</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center no-gutters">
+          <div class="col-lg-6">
+            <img class="img-fluid" src="img/tic.png" alt="">
+          </div>
+          <div class="col-lg-6">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Tic Tac Toe</h4>
                   <p class="mb-0 text-white-50">A Tic-Tac-Toe game built as a single page application using jQuery and AJAX to connect to a third-party API </p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
@@ -241,10 +270,10 @@
           <div class="col-lg-6">
             <img class="img-fluid" src="img/hello.png" alt="">
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-left">
+                <div class="project-text w-100 my-auto text-center text-lg-right">
                   <h4 class="text-white">HelloKittySurvey</h4>
                   <p class="mb-0 text-white-50">Team Project - Built an app that lets users create custom surveys
                     and collect responses for that particular survey. Uses Node/Express for server-side with MongoDb
@@ -263,34 +292,7 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img class="img-fluid" src="img/hike.png" alt="">
-          </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">LetsHike</h4>
-                  <p class="mb-0 text-white-50">A full-stack React and Rails app for the hiking aficionodo.
-                    Uses third-party api to get hiking trails near a given location and its respective weather. The app
-                    will issue recommendations to users based on the weather of where the trail is located.
-                    It will use Hiking Project API for trails and OpenWeather API for local weather.
-                  </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0">
-                  <div class="links">
-                    <div class="">
-                      <a href="https://letshike.herokuapp.com/" target="_blank">Live Demo</a>
-                    </div>
-                    <div class="">
-                      <a href="https://github.com/jasonfeliz/letshike" target="_blank">GitHub</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img class="img-fluid" src="img/codebinj.jpg" alt="">
